@@ -19,6 +19,9 @@ Changes in 0.71.2
     * Added new CheckDesktopFiles policy to catch some more common errors
       in .desktop files.  (For now, it looks for common cases of missing
       icons; more may be added over time.)
+    * The Requires policy now interprets synthetic RPATH elements (passed in
+      with the rpath= keyword argument) as shell-style globs that are
+      interpreted relative first to the destdir and then to the system.
 
 Changes in 0.71.1:
   o Server Changes 
